force-app/main/default/objects/Team__c/Team__c.object-meta.xml
<CustomObject>
    <label>Team</label>
    <nameField>
        <displayFormat>TeamID {000000}</displayFormat>
        <label>TeamID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>