force-app/main/default/objects/Team__c/fields/Banned_Champion_10__c.field-meta.xml
<CustomField>
    <fullName>Banned_Champion_10__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Banned Champion 10</label>
    <referenceTo>Champion__c</referenceTo>
    <relationshipLabel>Teams10</relationshipLabel>
    <relationshipName>Teams10</relationshipName>
    <type>Lookup</type>
</CustomField>