force-app/main/default/objects/Team__c/fields/Banned_Champion_1__c.field-meta.xml
<CustomField>
    <fullName>Banned_Champion_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Banned Champion 1</label>
    <referenceTo>Champion__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>