force-app/main/default/objects/Team__c/fields/Banned_Champion_2__c.field-meta.xml
<CustomField>
    <fullName>Banned_Champion_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Banned Champion 2</label>
    <referenceTo>Champion__c</referenceTo>
    <relationshipLabel>Teams2</relationshipLabel>
    <relationshipName>Teams2</relationshipName>
    <type>Lookup</type>
</CustomField>