force-app/main/default/objects/Team__c/fields/Dominion_Victory_Score__c.field-meta.xml
<CustomField>
    <fullName>Dominion_Victory_Score__c</fullName>
    <label>Dominion Victory Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>