force-app/main/default/objects/Team__c/fields/Dragon_Kills__c.field-meta.xml
<CustomField>
    <fullName>Dragon_Kills__c</fullName>
    <label>Dragon Kills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>