force-app/main/default/objects/Team__c/fields/First_Baron__c.field-meta.xml
<CustomField>
    <fullName>First_Baron__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Baron</label>
    <type>Checkbox</type>
</CustomField>