force-app/main/default/objects/Team__c/fields/First_Blood__c.field-meta.xml
<CustomField>
    <fullName>First_Blood__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Blood</label>
    <type>Checkbox</type>
</CustomField>