force-app/main/default/objects/Team__c/fields/First_Dragon__c.field-meta.xml
<CustomField>
    <fullName>First_Dragon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Dragon</label>
    <type>Checkbox</type>
</CustomField>