force-app/main/default/objects/Team__c/fields/First_Inhibitor__c.field-meta.xml
<CustomField>
    <fullName>First_Inhibitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Inhibitor</label>
    <type>Checkbox</type>
</CustomField>