force-app/main/default/objects/Team__c/fields/First_Rift_Heral__c.field-meta.xml
<CustomField>
    <fullName>First_Rift_Heral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Rift Heral</label>
    <type>Checkbox</type>
</CustomField>