force-app/main/default/objects/Team__c/fields/First_Tower__c.field-meta.xml
<CustomField>
    <fullName>First_Tower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Tower</label>
    <type>Checkbox</type>
</CustomField>