force-app/main/default/objects/Team__c/fields/Inhibitor_Kills__c.field-meta.xml
<CustomField>
    <fullName>Inhibitor_Kills__c</fullName>
    <label>Inhibitor Kills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>