force-app/main/default/objects/Team__c/fields/Rift_Herald_Kills__c.field-meta.xml
<CustomField>
    <fullName>Rift_Herald_Kills__c</fullName>
    <label>Rift Herald Kills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>