force-app/main/default/objects/Team__c/fields/Vilemaw_Kills__c.field-meta.xml
<CustomField>
    <fullName>Vilemaw_Kills__c</fullName>
    <label>Vilemaw Kills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>