force-app/main/default/objects/Team__c/fields/Win__c.field-meta.xml
<CustomField>
    <fullName>Win__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Win</label>
    <type>Checkbox</type>
</CustomField>