force-app/main/default/objects/Team__c/recordTypes/Blue.recordType-meta.xml
<RecordType>
    <fullName>Blue</fullName>
    <active>true</active>
    <label>Blue</label>
</RecordType>