force-app/main/default/objects/Team__c/recordTypes/Red.recordType-meta.xml
<RecordType>
    <fullName>Red</fullName>
    <active>true</active>
    <label>Red</label>
</RecordType>